Large codebase refactor:
- Added Tray icon & hides default window
- Added Settings Page
- Changed window to spawn new gui.window with no frame
- Temp file cleanup
- Better code organization

--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
   "node-main": "app.js",
   "main": "index.html",
   "window": {
-    "frame": false,
-    "toolbar": false,
+    "frame": true,
+    "toolbar": true,
+    "show": true,
     "width": 200,
     "height": 150,
     "position": "center"
