--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,8 +1,8 @@
 {
-	"server": {
+	"web-server": {
 		"url": "http://127.0.0.1:1234/",
 		"host": "127.0.0.1",
-		"port": 1234
+		"port": 1234,
 	},
 	"database": {
 		"enabled": false,
@@ -10,14 +10,7 @@
 			"host": "localhost",
 			"port": 28015,
 			"db": "grabkit"
-		},
-		"poolMax": 10,
-		"poolMin": 5
+		}
 	},
-	"dust": {
-		"templateDir": "templates/",
-		"layoutsDir": "templates/layouts/"
-	},
-	"systemDir": "libs/autoload/",
 	"uploads": "public/uploads/"
 }
