--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "async": "^0.9.0",
+    "colors": "^1.0.3",
+    "dustjs-linkedin": "^2.4.2",
     "hapi": "^7.0.0",
+    "hapi-auth-cookie": "^1.3.2",
+    "hapi-dust": "^1.0.0",
+    "joi": "^4.7.0",
     "underscore": "^1.7.0"
   }
 }
